Atualização do front-end

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -7,5 +7,21 @@
 </head>
 <body>
     <a href="/logout">Sair</a>
+</body>
+</html>-->
+
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <title>Página Principal</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <h2>Bem-vindo!</h2>
+        <a href="/logout"><button class="buttons">Voltar</button></a>
+    </div>
 </body>
 </html>
