--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -17,5 +17,35 @@
         
         <input type="submit" value="Entrar">
     </form>
+</body>
+</html>-->
+
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <title>Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <h2>Login</h2>
+
+        <form action="/login" method="post">
+            <input type="text" name="usuario" placeholder="Usuário">
+
+            <input type="password" name="senha" placeholder="Senha">
+
+            <input class="buttons" type="submit" value="Entrar">
+        </form>
+        
+        <div class="info-projeto">
+            <p class="titulo-projeto">Entrega projeto 2 - Disciplina: AS63A (2025/1)</p>
+            <p>Bruno Circhia Biazon - RA: 2647958</p>
+            <p>Gabriel Carvalho Reginato - RA: 2647974</p>
+        </div>
+
+    </div>
 </body>
 </html>
